Revert "fix(@clayui/css): Checkbox and Radio text should be vertically aligned at the start when breaking to new line"
This reverts commit c64c66907752800eeffeb46e42f044be2db2f931.

--- a/packages/clay-css/src/scss/cadmin/variables/_dropdowns.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_dropdowns.scss
@@ -327,8 +327,7 @@ $cadmin-dropdown-section-custom-control-label: map-deep-merge(
 $cadmin-dropdown-section-custom-control-label-text: () !default;
 $cadmin-dropdown-section-custom-control-label-text: map-deep-merge(
 	(
-		display: block,
-		padding-left: 28px,
+		padding-left: 16px,
 	),
 	$cadmin-dropdown-section-custom-control-label-text
 );
