--- a/packages/clay-css/src/scss/variables/_dropdowns.scss
+++ b/packages/clay-css/src/scss/variables/_dropdowns.scss
@@ -437,13 +437,6 @@ $dropdown-section-custom-control-label: () !default;
 /// @deprecated as of v3.x use map $dropdown-section instead
 
 $dropdown-section-custom-control-label-text: () !default;
-$dropdown-section-custom-control-label-text: map-deep-merge(
-	(
-		display: block,
-		padding-left: 2rem,
-	),
-	$dropdown-section-custom-control-label-text
-);
 
 /// @deprecated as of v3.x use map $dropdown-section instead
 
